--- a/src/styles/pages/_general.scss
+++ b/src/styles/pages/_general.scss
@@ -1,3 +1,12 @@
+.spin-remove{
+    input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button { 
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        margin: 0; 
+    }
+}
 @media only screen and (max-width: 786px) {
     .resp-p-a-0 {
         padding: 0;
