--- a/src/styles/pages/_general.scss
+++ b/src/styles/pages/_general.scss
@@ -21,6 +21,11 @@
     .resp-m-a-0{
         margin: 0;
     }
+    .btn-m-r-l-0{
+        margin-left: 0 !important;
+        margin-top: 10px !important; 
+        margin-right: 8px !important;
+    }
     .resp-m-x-0{
         margin-right: 0;
         margin-left: 0;
@@ -62,6 +67,6 @@
         width: 91.66%;
     }
     .col-xs-12{
-        width: 100%;
+        width: 100% !important;
     }
 }
