--- a/src/styles/bootstrap/_tables.scss
+++ b/src/styles/bootstrap/_tables.scss
@@ -155,7 +155,7 @@
 
 .table-responsive {
   @include media-breakpoint-down(md) {
-    display: block;
+    display: table;
     width: 100%;
     overflow-x: auto;
     -ms-overflow-style: -ms-autohiding-scrollbar; // See https://github.com/twbs/bootstrap/pull/10057
