--- a/src/styles/pages/_general.scss
+++ b/src/styles/pages/_general.scss
@@ -7,6 +7,11 @@
         margin: 0; 
     }
 }
+@media (max-width: 768px) {
+    .table-responsive{
+        display: inherit ;
+    }
+}
 @media only screen and (max-width: 786px) {
     .resp-p-a-0 {
         padding: 0;
