--- a/src/styles/layout/_header-theme.scss
+++ b/src/styles/layout/_header-theme.scss
@@ -60,6 +60,7 @@
 
 .top-nav-right {
   display: inline-block;
+  transform: translateY(-50px);
   font-size: 16px;
   line-height: $header_line_height;
   float: right;
