changes in design

--- a/src/styles/pages/_general.scss
+++ b/src/styles/pages/_general.scss
@@ -9,7 +9,7 @@
 }
 @media (max-width: 768px) {
     .table-responsive{
-        display: inherit ;
+        display: inline-table ;
     }
 }
 //ipad 
